--- a/app/src/main/res/layout/bottom_bar_layout.xml
+++ b/app/src/main/res/layout/bottom_bar_layout.xml
@@ -19,12 +19,14 @@
         android:id="@+id/inputTextMessage"
         android:layout_centerInParent="true"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="40dp"
         android:layout_margin="4dp"
+        android:padding="10dp"
         android:layout_toStartOf="@id/btnSend"
         android:layout_toLeftOf="@id/btnSend"
+        android:background="@drawable/border_edittext"
         android:hint="Aa"
-        android:textSize="14sp" />
+        android:textSize="14sp"/>
 
 
 </RelativeLayout>
